
  * New upstream release.
    + Fix long version of the "-c" option in the manpage (Closes:#544253).
    + New configuration variable BM_LOGGER_LEVEL controls which messages
      should be sent to syslog. By default, only warnings and errors are
      logged (Closes: #488077).
  * Remove several patches that were applied upstream, refresh the others.
  * Register the user guide in doc-base.
  * Remove spurious trailing whitespace from debian/control.
  * Upgrade Standards-Version to 3.8.3, no changes needed.

 -- Sven Joachim <svenjoac@gmx.de>  Wed, 20 Jan 2010 18:30:34 +0100

backup-manager (0.7.8-2) unstable; urgency=medium

  * New maintainer (Closes: #536155).
  * Add missing build dependencies (Closes: #516060).
  * Make debian/rules less verbose (Closes: #535372).
  * Fix failure of the tarball-incremental method on the 8th and 9th
    day of each month (Closes: #518956). Thanks to Margarita Manterola.
  * Fix bug that treated tar warnings as fatal errors (Closes: #532976).
    Thanks to Alexey Salmin.
  * Install the user guide into /usr/share/doc/backup-manager-doc
    again (Closes: #528161).
  * Update the German upstream translation (Closes: #499667).
  * Mention in README.Debian that libfile-slurp-perl and libnet-amazon-s3-perl
    are required for the s3 upload method (see #491199).
  * Fix a bashism in po/Makefile.
  * Use a single debian/copyright file instead of only slightly different
    ones for backup-manager and backup-manager-doc.
  * Switch to quilt from dpatch.
    - Don't make any direct changes outside debian/ .
    - Add a short README.source as recommended by policy.
  * Upgrade debhelper compatibility level to 7.
  * Some debian/control cleanups:
    - Let backup-manager-doc and backup-manager suggest each other,
      do not suggest libnet-perl and perl-modules (redundant).
    - Drop versioned dependency on gzip, even Woody had a newer version.
    - Expand backup-manager-doc's extended description a bit.